# emoji-board

./: .gitignore  README.md  emoji-keyboard.cabal  flake.nix  justfile
.github/workflows/: ci.yml  static-build.yml
src/: EmojiDatabase.hs  Main.hs
src/assets/: emoji-keyboard.desktop
